--- a/1.LinuxCommands.ipynb
+++ b/1.LinuxCommands.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "LinuxCommands.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPMQNVPzq4LWjFCz9/phaCX",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sachinmotwani20/GUVI_AI/blob/master/1.LinuxCommands.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
